[package]
edition = "2021"
name = "default2"
version = "0.3.1"
authors = ["Navid <yaa110@gmail.com>"]
homepage = "https://github.com/yaa110/default2"
repository = "https://github.com/yaa110/default2"
documentation = "https://docs.rs/default2"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Default implementation using macros"
categories = ["development-tools", "development-tools::procedural-macro-helpers"]
keywords = ["default", "derive"]
exclude = ["/.github", "tests"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = {version = "2", features = ["full"]}

[[test]]
name = "tests"
path = "tests/src/lib.rs"
