[package]
authors = ["Navid <yaa110@gmail.com>"]
categories = ["development-tools", "development-tools::procedural-macro-helpers"]
description = "Default implementation using macros"
documentation = "https://docs.rs/default2"
edition = "2024"
exclude = ["/.github", "tests"]
homepage = "https://github.com/yaa110/default2"
keywords = ["default", "derive"]
license = "MIT OR Apache-2.0"
name = "default2"
readme = "README.md"
repository = "https://github.com/yaa110/default2"
version = "1.0.2"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = {version = "2", features = ["full"]}

[[test]]
name = "tests"
path = "tests/src/lib.rs"
